added Jakarta JAXB dependencies